--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -71,6 +71,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
 }
 .label {
     font-size: 95%;
+    padding-bottom: 0.2em;
 }
 .link {
     text-decoration: underline;
