--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,27 +21,28 @@
             <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
             {% endstylesheets %}
         {% endblock %}
-        {# favicon http://realfavicongenerator.net #}
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=gAAJ8gpjPv">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=gAAJ8gpjPv">
-        <link rel="icon" type="image/png" href="/favicon-32x32.png?v=gAAJ8gpjPv" sizes="32x32">
-        <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=gAAJ8gpjPv" sizes="192x192">
-        <link rel="icon" type="image/png" href="/favicon-96x96.png?v=gAAJ8gpjPv" sizes="96x96">
-        <link rel="icon" type="image/png" href="/favicon-16x16.png?v=gAAJ8gpjPv" sizes="16x16">
-        <link rel="manifest" href="/manifest.json?v=gAAJ8gpjPv">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg?v=gAAJ8gpjPv" color="#5bbad5">
-        <link rel="shortcut icon" href="/favicon.ico?v=gAAJ8gpjPv">
+        {# favicon http://realfavicongenerator.net y http://fa2png.io/ #}
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=7kkGLW3Q8k">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=7kkGLW3Q8k">
+        <link rel="icon" type="image/png" href="/favicon-32x32.png?v=7kkGLW3Q8k" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicon-194x194.png?v=7kkGLW3Q8k" sizes="194x194">
+        <link rel="icon" type="image/png" href="/favicon-96x96.png?v=7kkGLW3Q8k" sizes="96x96">
+        <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=7kkGLW3Q8k" sizes="192x192">
+        <link rel="icon" type="image/png" href="/favicon-16x16.png?v=7kkGLW3Q8k" sizes="16x16">
+        <link rel="manifest" href="/manifest.json?v=7kkGLW3Q8k">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg?v=7kkGLW3Q8k" color="#5bbad5">
+        <link rel="shortcut icon" href="/favicon.ico?v=7kkGLW3Q8k">
         <meta name="apple-mobile-web-app-title" content="ArchMage">
         <meta name="application-name" content="ArchMage">
         <meta name="msapplication-TileColor" content="#603cba">
-        <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=gAAJ8gpjPv">
+        <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=7kkGLW3Q8k">
         <meta name="theme-color" content="#ffffff">
     </head>
     {# body #}
