--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -89,9 +89,9 @@
                                 <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ troop.unit.defense|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ troop.unit.speed|nf }}</div>
                                 {# row #}
-                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ troop.unit.goldMaintenance|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ troop.unit.peopleMaintenance|nf }}</div>
-                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ troop.unit.manaMaintenance|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ (troop.unit.goldMaintenance * troop.quantity)|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ (troop.unit.peopleMaintenance * troop.quantity)|nf }}</div>
+                                <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ (troop.unit.manaMaintenance * troop.quantity)|nf }}</div>
                                 {# row #}
                                 <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ troop.unit.family.name }}</div>
                                 <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ troop.unit.type.name }}</div>
