--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -141,9 +141,9 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i>{{ auction.troop.unit.defense|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i>{{ auction.troop.unit.speed|nf }}</div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ auction.troop.unit.goldMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ auction.troop.unit.peopleMaintenance|nf }}</div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ auction.troop.unit.manaMaintenance|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ (auction.troop.unit.goldMaintenance * auction.troop.quantity)|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ (auction.troop.unit.peopleMaintenance * auction.troop.quantity)|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ (auction.troop.unit.manaMaintenance * auction.troop.quantity)|nf }}</div>
                             {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i>{{ auction.troop.unit.family.name }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i>{{ auction.troop.unit.type.name }}</div>
