--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -87,7 +87,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
 }
 .label {
     font-size: 95%;
-    padding: 0.2em 0.2em 0.1em 0.2em;
+    padding: 2px 2px 0px 2px;
     border: 1px solid black;
 }
 .label-extra {
