--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -45,9 +45,9 @@
                         </div>
                         <div class="col-xs-8 text-padded">
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Oro al turno por nivel">{{ (auction.contract.hero.goldMaintenance * auction.contract.level)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Personas al turno por nivel">{{ (auction.contract.hero.peopleMaintenance * auction.contract.level)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Maná al turno por nivel">{{ (auction.contract.hero.manaMaintenance * auction.contract.level)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Oro al turno por nivel">-{{ (auction.contract.hero.goldMaintenance * auction.contract.level)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Personas al turno por nivel">-{{ (auction.contract.hero.peopleMaintenance * auction.contract.level)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimento de Maná al turno por nivel">-{{ (auction.contract.hero.manaMaintenance * auction.contract.level)|nf }}</span></div>
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.contract.hero.skill.description|raw }}</div>
                             {# row #}
@@ -88,13 +88,13 @@
                         <div class="col-xs-8 text-padded">
                             {# row #}
                             <div class="col-xs-4"><i class="fa fa-fw fa-magic"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Nivel de Magia mínimo para conjurar">{{ auction.research.spell.magic|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-hourglass-half"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Turnos para conjurar">{{ auction.research.spell.turnsCost|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Maná para conjurar">{{ auction.research.spell.manaCost|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-hourglass-half"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Turnos para conjurar">-{{ auction.research.spell.turnsCost|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Coste de Maná para conjurar">-{{ auction.research.spell.manaCost|nf }}</span></div>
                             {# row #}
                             {% if auction.research.spell.enchantment %}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno por nivel de Magia">{{ auction.research.spell.goldMaintenance|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno por nivel de Magia">{{ auction.research.spell.peopleMaintenance|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno por nivel de Magia">{{ auction.research.spell.manaMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Oro al turno por nivel de Magia">-{{ auction.research.spell.goldMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Personas al turno por nivel de Magia">-{{ auction.research.spell.peopleMaintenance|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento de Maná al turno por nivel de Magia">-{{ auction.research.spell.manaMaintenance|nf }}</span></div>
                             {% endif %}
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.research.spell.skill.description|raw }}</div>
@@ -139,9 +139,9 @@
                             <div class="col-xs-4"><i class="fa fa-fw fa-shield"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Defensa total de la tropa">{{ (auction.troop.unit.defense * auction.troop.quantity)|nf }}</span></div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-flash"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Velocidad de la tropa">{{ auction.troop.unit.speed|nf }}</span></div>
                             {# row #}
-                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Oro al turno">{{ (auction.troop.unit.goldMaintenance * auction.troop.quantity)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Personas al turno">{{ (auction.troop.unit.peopleMaintenance * auction.troop.quantity)|nf }}</span></div>
-                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Maná al turno">{{ (auction.troop.unit.manaMaintenance * auction.troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Oro al turno">-{{ (auction.troop.unit.goldMaintenance * auction.troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Personas al turno">-{{ (auction.troop.unit.peopleMaintenance * auction.troop.quantity)|nf }}</span></div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Mantenimiento total de Maná al turno">-{{ (auction.troop.unit.manaMaintenance * auction.troop.quantity)|nf }}</span></div>
                             {# row #}
                             <div class="col-xs-6"><i class="fa fa-fw fa-user"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Familia de la tropa">{{ auction.troop.unit.family.name }}</span></div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-cogs"></i><span class="label label-extra" data-toggle="tooltip" data-placement="top" title="Tipo de la tropa">{{ auction.troop.unit.type.name }}</span></div>
